--- a/Index.css
+++ b/Index.css
@@ -1,1 +1,22 @@
-Css
+p{
+    text-align: center;
+    font-weight: monospace;
+}
+button{
+    margin: 0px 100px;
+}
+#logo{
+    font-family: 'Odibee Sans', cursive;
+}
+li a{
+    color: aliceblue;
+}
+div{
+    margin: 10px 0px;
+    padding: 20px;
+}
+
+img{
+    display: block;
+    margin: auto;
+}
